--- a/html/scss/style.scss
+++ b/html/scss/style.scss
@@ -1135,7 +1135,7 @@ footer h3 {
     height: 44px;
 }
 .fa-yt {
-    background: ##FF0000;
+    background: #FF0000;
     padding: 13px 16px;
     border-radius: 50%;
     width: 44px;
