--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1081,8 +1081,7 @@ footer {
   color: #969696; }
 
 .btn-warning,.btn-black1 {
-    background: #000;
-    color: #FFF;
+    background: #ff9300;
     border: none;
     border-radius: 3px;
     padding: 17px 34px;
@@ -1090,7 +1089,9 @@ footer {
     outline: none;
     cursor: pointer;
     font-weight: bold; }
-
+.btn-black1 {
+    background: #000;
+}
 .btn-black.active,
 .btn-black:active,
 .show > .btn-warning.dropdown-toggle {
