--- a/html/css/style.css
+++ b/html/css/style.css
@@ -68,13 +68,13 @@ Author:
   display: none; }
 
 .icon-menu {
-  color: #ff9300; }
+  color: #f37425; }
 
 .btn-default {
   text-transform: uppercase;
-  color: #ff9300;
+  color: #f37425;
   background: none;
-  border: 3px solid #ff9300;
+  border: 3px solid #f37425;
   font-size: 18px;
   padding: 16px 36px;
   border-radius: 0; }
@@ -85,15 +85,15 @@ Author:
 
 .btn-default:hover {
   color: #fff;
-  background: #ff9300;
-  border: 3px solid #ff9300; }
+  background: #f37425;
+  border: 3px solid #f37425; }
 
 .btn:focus {
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
   color: #fff;
-  background: #ff9300; }
+  background: #f37425; }
 
 .dropdown-menu {
   min-width: 14rem;
@@ -106,14 +106,14 @@ Author:
 
 .dropdown-item.active,
 .dropdown-item:active {
-  background-color: #ff9300; }
+  background-color: #f37425; }
 
 .dropdown-menu1 {
   left: -225px;
   top: -6px !important; }
 
 .dropdown-item:hover {
-  color: #ff9300;
+  color: #f37425;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s; }
@@ -125,7 +125,7 @@ Author:
   color: #fff; }
 
 .nav-toggle_icon {
-  color: #ff9300; }
+  color: #f37425; }
 
 .navbar2 {
   padding-left: 0;
@@ -152,11 +152,11 @@ Author:
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
   background: none;
-  color: #ff9300; }
+  color: #f37425; }
 
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-nav > li > a:hover {
-  color: #ff9300; }
+  color: #f37425; }
 
 .nav .open > a,
 .nav .open > a:focus,
@@ -167,7 +167,7 @@ Author:
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
   background: none;
-  color: #ff9300; }
+  color: #f37425; }
 
 .bg-faded {
   background: none; }
@@ -183,14 +183,14 @@ Author:
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.open,
 .navbar-light .navbar-nav .open > .nav-link {
-  color: #ff9300; }
+  color: #f37425; }
 
 .navbar-light .navbar-nav .nav-link {
   color: #ff6b00;
   font-size: 19px; }
 
 .navbar-light .navbar-toggler {
-  border: 1px solid #ff9300;
+  border: 1px solid #f37425;
   z-index: 999;
   cursor: pointer;
   outline: none;
@@ -229,7 +229,7 @@ Author:
     color: #2d2d2d; }
   .dropdown .dropdown-menu {
     background-color: #fff;
-    border: 1px solid #ff9300; }
+    border: 1px solid #f37425; }
   .navbar-toggleable-md .navbar-nav .dropdown-menu {
     text-align: center; } }
 
@@ -288,7 +288,7 @@ p {
   font-size: 17px; }
 
 a {
-  color: #ff9300;
+  color: #f37425;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease; }
@@ -355,7 +355,7 @@ a {
   margin: 42px 0 0; }
 
 .carousel-indicators .active {
-  background: #ff9300; }
+  background: #f37425; }
 
 .fa-slider {
   padding: 14px 14px;
@@ -626,7 +626,7 @@ a {
   position: absolute;
   top: 28px;
   left: 48px;
-  background: #ff9300;
+  background: #f37425;
   border-radius: 2px;
   padding: 8px 12px;
   color: #fff;
@@ -708,7 +708,7 @@ a {
     .date-description h3:after {
       height: 2px;
       width: 21px;
-      background: #ff9300;
+      background: #f37425;
       content: "";
       position: absolute;
       left: 0;
@@ -825,7 +825,7 @@ a {
   .blogtitle h3 {
     font-weight: 700; }
   .blogtitle p {
-    color: #ff9300;
+    color: #f37425;
     display: inline-block;
     padding: 0 6px 0 6px; }
 
@@ -1081,7 +1081,7 @@ footer {
   color: #969696; }
 
 .btn-warning,.btn-black1 {
-    background: #ff9300;
+    background: #f37425;
     color: #fff;
     border: none;
     border-radius: 3px;
@@ -1097,11 +1097,11 @@ footer {
 .btn-black:active,
 .show > .btn-warning.dropdown-toggle {
   color: #fff;
-  background: #ff9300; }
+  background: #f37425; }
 
 .btn-warning:hover {
   border: none;
-  background: #bfa97f; }
+  background: #292b2c; }
 
 .foot-logo {
   padding: 60px 0 34px; }
@@ -1255,7 +1255,7 @@ footer h3 {
     background: #ccc; }
 
   .blog_diversitymoney {
-    background: url(../images/blog_diversitymoney.jpg) no-repeat;
+    background: url(../images/boot.jpg) no-repeat;
     -webkit-background-size: cover;
     background-size: cover; }
     .blog_diversitymoney h1 {
@@ -1290,7 +1290,7 @@ footer h3 {
 
 
 .about_bg {
-  background: url(../images/cassie.jpg) center/cover no-repeat;
+  background: url(../images/codex.jpg) center/cover no-repeat;
   -webkit-background-size: cover;
   background-size: cover; }
   .about_bg h1 {
@@ -1321,10 +1321,10 @@ footer h3 {
 
 .btn-about {
   background: none;
-  border: 3px solid #ff9300;
+  border: 3px solid #f37425;
   border-radius: 2px;
   padding: 14px 20px;
-  color: #ff9300;
+  color: #f37425;
   font-size: 15px;
   margin: 16px 0 0; }
 
@@ -1353,10 +1353,10 @@ footer h3 {
   cursor: -webkit-grab;
   cursor: grab; }
   .quote i {
-    border: 2px solid #ff9300;
+    border: 2px solid #f37425;
     padding: 20px;
     border-radius: 50%;
-    color: #ff9300; }
+    color: #f37425; }
   .quote .quote_text {
     text-align: center;
     margin: 31px auto;
@@ -1372,7 +1372,7 @@ footer h3 {
         text-rendering: auto;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        color: #ff9300; }
+        color: #f37425; }
       .quote .quote_text:before {
         content: "\f10d";
         top: 0;
@@ -1397,7 +1397,7 @@ footer h3 {
     margin-bottom: 0;
     padding-left: 10px; }
     .testi-img_block p span {
-      color: #ff9300;
+      color: #f37425;
       font-size: 16px;
       display: block; }
 
@@ -1447,7 +1447,7 @@ footer h3 {
     .our-teachers-block .teachers-description p {
       margin: 0; }
       .our-teachers-block .teachers-description p span {
-        color: #ff9300;
+        color: #f37425;
         font-weight: 100;
         font-size: 18px; }
 
@@ -1610,7 +1610,7 @@ select.form-control.custom-select {
       .course_duration ul li p {
         padding: 0;
         margin: 0;
-        color: #ff9300; }
+        color: #f37425; }
       .course_duration ul li span {
         font-weight: 700;
         font-size: 15px; }
@@ -1700,12 +1700,12 @@ select.form-control.custom-select {
     .admission_testimonial .admissiontesti-text_block h6 {
       line-height: 1.5; }
       .admission_testimonial .admissiontesti-text_block h6 span {
-        color: #ff9300; }
+        color: #f37425; }
 
 .admission_rating {
   padding: 6px 16px;
   margin: 70px 0 0;
-  background: #ff9300;
+  background: #f37425;
   display: inline-block; }
   .admission_rating li {
     float: left;
@@ -1714,7 +1714,7 @@ select.form-control.custom-select {
     list-style: none;
     padding: 10px 0;
     color: #fff;
-    border-bottom: 1px solid #ff9300; }
+    border-bottom: 1px solid #f37425; }
     .admission_rating li span {
       float: right; }
   .admission_rating li:nth-child(11)
@@ -1736,7 +1736,7 @@ select.form-control.custom-select {
     font-weight: 700;
     font-size: 15px; }
     .admission_insruction p span {
-      color: #ff9300; }
+      color: #f37425; }
 
 .admission_share-icon {
   margin: 50px 0 0; }
@@ -1820,7 +1820,7 @@ select.form-control.custom-select {
     list-style: none;
     background: url(../images/right-icon.png) no-repeat;
     font-size: 17px;
-    color: #ff9300;
+    color: #f37425;
     padding-left: 30px;
     line-height: 2; }
 
@@ -2004,7 +2004,7 @@ select.form-control.custom-select {
     border-bottom: 0;
     padding-bottom: 30px; }
   .research-posts .research-news_block span {
-    color: #ff9300;
+    color: #f37425;
     font-size: 13px;
     font-weight: 700;
     margin-top: 30px; }
@@ -2027,7 +2027,7 @@ select.form-control.custom-select {
   width: 100%; }
 
 .research-featurestext_block {
-  background: #ff9300;
+  background: #f37425;
   max-width: 850px;
   margin: -180px auto 0 auto;
   padding: 50px 77px;
@@ -2109,7 +2109,7 @@ select.form-control.custom-select {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
   .blog-date span {
-    color: #ff9300;
+    color: #f37425;
     font-size: 18px;
     font-weight: 700; }
 
@@ -2248,7 +2248,7 @@ select.form-control.custom-select {
   border-color: #e3eaef; }
 
 .page-next {
-  background: #ff9300;
+  background: #f37425;
   color: #fff;
   border-color: transparent; }
 
@@ -2315,7 +2315,7 @@ select.form-control.custom-select {
 
 .blogpost_list {
   font-weight: 700;
-  border-bottom: 2px solid #ff9300;
+  border-bottom: 2px solid #f37425;
   padding: 0 0 3px;
   line-height: 2.3; }
 
@@ -2340,7 +2340,7 @@ select.form-control.custom-select {
 
 .blogpost-tab-description h6 {
   font-size: 17px;
-  color: #ff9300;
+  color: #f37425;
   margin-bottom: 0;
   margin-top: 10px; }
 
@@ -2396,7 +2396,7 @@ p.blogpost-rply {
   margin: 0 0 24px; }
 
 .event-date {
-  background: #ff9300;
+  background: #f37425;
   padding: 20px 5px; }
   .event-date h4 {
     font-size: 76px;
@@ -2441,11 +2441,11 @@ p.blogpost-rply {
   text-transform: uppercase;
   font-size: 15px;
   text-decoration: underline;
-  color: #ff9300;
+  color: #f37425;
   font-weight: 700; }
 
 .event-toggle:focus {
-  color: #ff9300; }
+  color: #f37425; }
 
 .event-toggle:hover {
   color: #b39a6b;
@@ -2459,11 +2459,11 @@ p.blogpost-rply {
 
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  border-bottom: 2px solid #ff9300;
+  border-bottom: 2px solid #f37425;
   border-right: 1px solid #fff;
   border-left: 1px solid #fff;
   border-top: 1px solid #fff;
-  color: #ff9300; }
+  color: #f37425; }
 
 .nav-tabs {
   border: none;
@@ -2478,8 +2478,8 @@ p.blogpost-rply {
 .nav-tabs .nav-link:focus,
 .nav-tabs .nav-link:hover {
   border-color: #fff #fff #fff;
-  color: #ff9300;
-  border-bottom: 2px solid #ff9300;
+  color: #f37425;
+  border-bottom: 2px solid #f37425;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s; }
@@ -2706,7 +2706,7 @@ button.accordion {
 
 button.accordion.active,
 button.accordion:hover {
-  border-left: 2px solid #ff9300; }
+  border-left: 2px solid #f37425; }
 
 button.accordion:after {
   content: '\002B';
@@ -2734,7 +2734,7 @@ div.panel {
   -o-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
   border-right: 1px solid #eee;
-  border-left: 2px solid #ff9300; }
+  border-left: 2px solid #f37425; }
   div.panel p {
     font-size: 15px;
     color: #ffffff;
@@ -2750,14 +2750,14 @@ div.panel {
 
 .accordian-link:hover,
 .accordian-link:focus {
-  color: #ff9300;
+  color: #f37425;
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
   text-decoration: none; }
 
 .accordian-link:active {
-  color: #ff9300; }
+  color: #f37425; }
 
 .card-header {
   background: none; }
@@ -2895,7 +2895,7 @@ div.panel {
 .btn-warning:active,
 .show > .btn-warning.dropdown-toggle {
   border: none;
-  background: #ff9300; }
+  background: #f37425; }
 
 .bnt-border_1 {
   border-bottom: 4px solid #9e8452; }
@@ -2919,7 +2919,7 @@ div.panel {
   text-transform: uppercase;
   color: #ffffff;
   background: none;
-  border: 1px solid #ff9300;
+  border: 1px solid #f37425;
   font-size: 15px;
   padding: 16px 36px;
   border-radius: 0;
@@ -2968,7 +2968,7 @@ div.panel {
   margin: 0 0 24px; }
 
 .contact-form {
-  background: #ff9300;
+  background: #f37425;
   position: relative;
   z-index: 2; }
   .contact-form h3 {
@@ -2986,7 +2986,7 @@ div.panel {
 .btn-submit:hover {
   border: 3px solid #fff;
   background: #fff;
-  color: #ff9300;
+  color: #f37425;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -3052,7 +3052,7 @@ div.panel {
   font-size: 16px;
   line-height: 2; }
   .nav-menu2 .navbar-light .navbar-nav .nav-link:hover {
-    color: #ff9300; }
+    color: #f37425; }
 
 .nav-menu2 .navbar-nav > li {
   margin: 0 4px; }
@@ -3079,14 +3079,14 @@ div.panel {
   margin-top: -8px; }
 
 .event-img2 span {
-  color: #ff9300; }
+  color: #f37425; }
 
 .event-img2 p {
   padding: 10px 0 0; }
 
 .detailed_chart2 {
   padding: 97px 0;
-  background: #ff9300; }
+  background: #f37425; }
 
 .faq {
   padding: 97px 0; }
@@ -3145,12 +3145,12 @@ div.panel {
   font-size: 18px;
   border-radius: 5px;
   text-align: center;
-  color: #ff9300;
+  color: #f37425;
   background: none !important;
   border: 0 !important; }
 
 .btn-default:active .filter-button:active {
-  color: #ff9300;
+  color: #f37425;
   background: none !important;
   border: 0 !important; }
 
@@ -3179,7 +3179,7 @@ div.panel {
   .notice-wrap h4 {
     font-weight: 600; }
   .notice-wrap span {
-    color: #ff9300; }
+    color: #f37425; }
   .notice-wrap p {
     margin: 12px 0 0;
     line-height: 1.8; }
@@ -3196,7 +3196,7 @@ div.panel {
       position: absolute;
       height: 5px;
       width: 52px;
-      background: #ff9300;
+      background: #f37425;
       left: 0;
       bottom: 0;
       margin: 7px 0 0; }
@@ -3293,7 +3293,7 @@ div.panel {
     position: absolute;
     height: 3px;
     width: 50px;
-    background: #ff9300;
+    background: #f37425;
     left: 0;
     bottom: 0; }
 
@@ -3319,7 +3319,7 @@ div.panel {
         color: #e6cfa2; }
 
 .landing-highlight {
-  background: #ff9300;
+  background: #f37425;
   padding: 20px;
   color: #fff;
   text-align: center; }
@@ -3330,7 +3330,7 @@ div.panel {
   background: #fff;
   padding: 25px;
   border-radius: 3px;
-  border: 1px solid #ff9300; }
+  border: 1px solid #f37425; }
   .landing-form-wrap .btn {
     width: 100%; }
 
@@ -3390,7 +3390,7 @@ div.panel {
     content: "";
     position: absolute;
     height: 3px;
-    background: #ff9300;
+    background: #f37425;
     width: 30px;
     bottom: 0;
     left: 0; }
@@ -3458,7 +3458,7 @@ div.panel {
   font-size: 25px; }
 
 .bg-gold {
-  background-color: #ff9300 !important; }
+  background-color: #f37425 !important; }
 
 .price li {
   border-bottom: 1px solid #eee;
@@ -3470,7 +3470,7 @@ div.panel {
   font-size: 20px; }
 
 .price .button {
-  background-color: #ff9300;
+  background-color: #f37425;
   border: none;
   color: #fff;
   padding: 10px 25px;
@@ -3532,7 +3532,7 @@ div.panel {
   color: #444; }
 
 .mega-dropdown-menu .dropdown-header {
-  color: #ff9300;
+  color: #f37425;
   font-size: 18px;
   font-weight: bold;
   margin: 0 0 10px; }
