--- a/html/css/style.css
+++ b/html/css/style.css
@@ -203,7 +203,8 @@ Author:
 
 @media (max-width: 1200px) {
   .navbar-nav > li {
-    margin: 74px 10px 74px 10px; } }
+    margin: 74px 5px 74px 5px; }
+}
 
 @media (max-width: 991px) {
   .navbar-nav > li {
@@ -220,7 +221,7 @@ Author:
     background-color: #fafafa; }
   .navbar {
     padding: 0;
-    margin: -113px 0 0 0; }
+    margin: -50px 0 0 0; }
   .navbar-nav {
     padding: 10px 10px 10px 10px; }
   .navbar-light .navbar-toggler {
@@ -1148,7 +1149,7 @@ footer {
       transition: 0.2s; }
 
 footer h3 {
-  color: #fff;
+  font-weight: 700;
   padding: 60px 0 0; }
 
 .address p {
