--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,24 @@ Version      : 1.0
 .menu-bg .navbar-nav li:last-child a:hover, .menu-bg .navbar-nav li:last-child.active a {
     color: #FFF;
 }
+.mt-5 {
+    margin-top: 80px;
+}
 
+.btn_01 {
+    color: #FFF;
+    background: #FF9800;
+    padding: 15px 30px;
+    font-weight: 600;
+    border: 2px solid #FF9800;
+    font-size: 16px;
+    margin-top: 20px;
+}
+.btn_01:hover {
+    color: #f37425;
+    border: 2px solid #FF9800;
+    background: transparent;
+}
 .about-us-area {padding-bottom: 0!important;}
 @media (max-width: 1200px) and (min-width: 767px){
     .mainmenu .navbar-nav li a{ padding:35px 13px!important; }
