--- a/html/css/style.css
+++ b/html/css/style.css
@@ -155,11 +155,19 @@ Author:
 .navbar-default .navbar-nav > .active > a:hover {
   background: none;
   color: #f37425; }
+.fc-daygrid-event-dot {
+  border: calc(var(--fc-daygrid-event-dot-width,8px)/ 2) solid #2196F3;
+}
+.fc-daygrid-dot-event .fc-event-title {
+  text-align: right;
+}
 
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-nav > li > a:hover {
   color: #f37425; }
-
+.fc-direction-ltr .fc-daygrid-event.fc-event-end {
+  background: #f37425;
+}
 .nav .open > a,
 .nav .open > a:focus,
 .nav .open > a:hover {
@@ -1147,11 +1155,19 @@ footer {
       -webkit-transition: 0.2s;
       -o-transition: 0.2s;
       transition: 0.2s; }
-
+.fc .fc-daygrid-day-number {
+  color: #000;
+}
+#calendar .fc .fc-event, .fc .fc-event-dot {
+  background: #f47424;
+}
 footer h3 {
   font-weight: 700;
   padding: 60px 0 0; }
-
+#calendar .fc-toolbar .fc-button-group .fc-button,
+.fc-direction-ltr .fc-toolbar>*>:not(:first-child){
+  background: #000;    text-transform: capitalize;
+}
 .address p {
   color: #292b2c;
   padding: 16px 0 0; }
