--- a/html/css/style.css
+++ b/html/css/style.css
@@ -156,12 +156,23 @@ Author:
   background: none;
   color: #f37425; }
 .fc-daygrid-event-dot {
-  border: calc(var(--fc-daygrid-event-dot-width,8px)/ 2) solid #2196F3;
+  border: calc(var(--fc-daygrid-event-dot-width,8px)/ 2) solid #000;
 }
 .fc-daygrid-dot-event .fc-event-title {
   text-align: right;
 }
-
+.fc .fc-daygrid-day-frame{
+  background: linear-gradient(#efefef, #fff);
+}
+.fc .fc-daygrid-day-frame {
+  background: linear-gradient(#fff, #f7f7f7);
+}
+.fc .fc-col-header-cell-cushion {
+  padding: 22px 4px;
+}
+.fc .fc-scrollgrid-section-liquid>td {
+  border: 0;
+}
 .navbar-default .navbar-nav > li > a:focus,
 .navbar-default .navbar-nav > li > a:hover {
   color: #f37425; }
@@ -1167,6 +1178,19 @@ footer h3 {
 #calendar .fc-toolbar .fc-button-group .fc-button,
 .fc-direction-ltr .fc-toolbar>*>:not(:first-child){
   background: #000;    text-transform: capitalize;
+}
+.fc-col-header {
+  background: #f7f7f7;
+}
+.fc .fc-scrollgrid-liquid {
+  border: 3px dashed #DDD;
+}
+.fc-direction-ltr .fc-daygrid-event.fc-event-end {
+  border-radius: 8px;
+  padding: 1px 10px;
+}
+.fc-daygrid-dot-event .fc-event-title,.fc-direction-ltr .fc-daygrid-event .fc-event-time {
+  color: #FFF;
 }
 .address p {
   color: #292b2c;
